# ECG-DigiNet

./: .gitignore  ECG_Pipeline.py  NOTEBOOK_STATUS.md  PROJECT_COMPLETION_REPORT.md  README.md  create_notebook.py  demo_pipeline.py  pyproject.toml  requirements.txt  setup.py  test_pipeline.py  usage_example.py
.github/workflows/: python-package.yml
ecg_pipeline/: __init__.py  ecg_pipeline.py
notebooks/: ECG_Pipeline.ipynb  ECG_Pipeline_NEW.ipynb
scripts/: demo_pipeline.py  final_verification.py  usage_example.py  verify_notebook.py
tests/: test_pipeline.py
