[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg_pipeline"
version = "0.1.0"
description = "High-Performance 12-Lead ECG Image to Time-Series Deep Learning Pipeline"
authors = [
    { name = "Tahleel1611" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "opencv-python",
    "scipy",
    "scikit-image",
    "torch",
    "torchvision",
    "matplotlib",
    "seaborn",
    "tqdm"
]
